--- a/nusim/package.xml
+++ b/nusim/package.xml
@@ -55,6 +55,7 @@
   <build_depend>std_msgs</build_depend>
   <exec_depend>std_msgs</exec_depend>
   <build_export_depend>std_msgs</build_export_depend>
+  <build_depend>tf2_ros</build_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
