--- a/nusim/package.xml
+++ b/nusim/package.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>nusim</name>
-  <version>0.0.0</version>
+  <version>0.0.1</version>
   <description>Simulates turtlebot3</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="mmoral45@todo.todo">mmoral45</maintainer>
+  <maintainer email="marcomorales2022@u.northwestern.edu">mmoral45</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
+  <license>APLv2</license>
 
 
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
@@ -69,6 +69,7 @@
   <exec_depend>xacro</exec_depend>
   <exec_depend>joint_state_publisher</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
+  <exec_depend>nuturtle_description</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
