--- a/nusim/package.xml
+++ b/nusim/package.xml
@@ -69,7 +69,7 @@
   <exec_depend>xacro</exec_depend>
   <exec_depend>joint_state_publisher</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
-  <!-- <exec_depend>nuturtle_description</exec_depend> -->
+  <exec_depend>nuturtle_description</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
