added diff drive library, still in progress

--- a/turtlelib/CMakeLists.txt
+++ b/turtlelib/CMakeLists.txt
@@ -122,6 +122,7 @@ include_directories(
 ## Declare a C++ librarsy
 add_library(${PROJECT_NAME}
 	src/rigid2d.cpp
+  src/diff_drive.cpp
 )
 add_executable(frame_main src/frame_main.cpp)
 
