--- a/turtlelib/CMakeLists.txt
+++ b/turtlelib/CMakeLists.txt
@@ -23,7 +23,7 @@ target_compile_options(turtlelib PUBLIC -Wall -Wextra)
 # into a single executable (as long as exactly one of these files includes a main() function).
 # However, by creating a library (as we are doing here) the library files
 # can be compiled once and used
-add_executable(frame_main src/frame_main.cpp)
+add_executable(frame_main src/frame_main.cpp) # rec: this is missing -Wall -Wextra and cxx_std_17
 target_link_libraries(frame_main turtlelib)
 
 # Use the cmake testing functionality. A test is just an executable.
