--- a/nusim/package.xml
+++ b/nusim/package.xml
@@ -71,6 +71,10 @@
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>nuturtle_description</exec_depend>
 
+  <build_depend>turtlelib</build_depend>
+  <build_export_depend>turtlelib</build_export_depend>
+  <exec_depend>turtlelib</exec_depend>
+
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
