nuturtlebox_msgs works

--- a/nuturtle_control/CMakeLists.txt
+++ b/nuturtle_control/CMakeLists.txt
@@ -10,6 +10,7 @@ project(nuturtle_control)
 find_package(catkin REQUIRED COMPONENTS
 message_generation
 message_runtime
+nuturtlebot_msgs
 roscpp
 )
 
