--- a/nuturtle_control/package.xml
+++ b/nuturtle_control/package.xml
@@ -56,6 +56,9 @@
 
   <build_depend>message_generation</build_depend>
 
+  <build_depend>nuturtlebot_msgs</build_depend>
+  <exec_depend>nuturtlebot_msgs</exec_depend>
+
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
