--- a/nusim/package.xml
+++ b/nusim/package.xml
@@ -64,6 +64,7 @@
   <build_depend>tf2_ros</build_depend>
   <build_depend>message_runtime</build_depend>
   <build_depend>message_generation</build_depend>
+  <build_depend>nuturtlebot_msgs</build_depend>
 
   <exec_depend>rviz</exec_depend>
   <exec_depend>xacro</exec_depend>
