--- a/nuturtle_control/package.xml
+++ b/nuturtle_control/package.xml
@@ -65,6 +65,10 @@
   <exec_depend>nusim</exec_depend>
   <build_export_depend>nusim</build_export_depend>
 
+  <build_depend>turtlebot3_teleop</build_depend>
+  <exec_depend>turtlebot3_teleop</exec_depend>
+  <build_export_depend>turtlebot3_teleop</build_export_depend>
+
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
