--- a/nuturtle_control/config/default_config.yaml
+++ b/nuturtle_control/config/default_config.yaml
@@ -1,12 +1,13 @@
-slip_min: 1
-slip_max: 0.5
+slip_min: 0.0
+slip_max: 0.00
 max_range: 2
-basic_sensor_variance: 0.5
+basic_sensor_variance: 0.0
 max_range: 2.0
 samples: 360
 resolution: 1
 min_angle: 0.0
 max_angle: 6.28319
+scan_time: 1.0
 min: 0.12
 max: 3.5
 robot_noise_mean: 0.0
