--- a/nuturtle_control/config/default_config.yaml
+++ b/nuturtle_control/config/default_config.yaml
@@ -1,4 +1,4 @@
-slip_min: 0.0
+slip_min: 0.00
 slip_max: 0.00
 max_range: 2
 basic_sensor_variance: 0.0
@@ -10,5 +10,6 @@ max_angle: 6.28319
 scan_time: 1.0
 min: 0.12
 max: 3.5
+laser_variance: 0.01
 robot_noise_mean: 0.0
-robot_noise_stddev: 0.01
+robot_noise_stddev: 0.0
