--- a/nuslam/package.xml
+++ b/nuslam/package.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>nuslam</name>
-  <version>0.0.0</version>
-  <description>The nuslam package</description>
+  <version>0.0.1</version>
+  <description>Creating an Extended Kalman Filter</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="mmoral45@todo.todo">mmoral45</maintainer>
+  <maintainer email="marcomorales2022@u.northwestern.edu">mmoral45</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
+  <license>APLv2</license>
 
 
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
@@ -53,6 +53,26 @@
   <build_export_depend>roscpp</build_export_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>turtlelib</exec_depend>
+
+  <exec_depend>tf2_ros</exec_depend>
+  <exec_depend>turtlebot3_teleop</exec_depend>
+  <exec_depend>xacro</exec_depend>
+  <exec_depend>robot_state_publisher</exec_depend>
+  <exec_depend>joint_state_publisher</exec_depend>
+  <exec_depend>rviz</exec_depend>
+  <exec_depend>nusim</exec_depend>
+  <exec_depend>nuturtle_description</exec_depend>
+  <exec_depend>nuturtle_control</exec_depend>
+
+  <build_depend>tf2</build_depend>
+  <build_depend>sensor_msgs</build_depend>
+  <build_depend>std_msgs</build_depend>
+  <build_depend>message_runtime</build_depend>
+  <build_depend>tf2_ros</build_depend>
+  <build_depend>geometry_msgs</build_depend>
+  <build_depend>turtlebot3_teleop</build_depend>
+  <build_depend>message_generation</build_depend>
+  <build_depend>nuturtlebot_msgs</build_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
