removed node used for testing and made it so obstacles disappear depending on distance

--- a/nuslam/CMakeLists.txt
+++ b/nuslam/CMakeLists.txt
@@ -141,12 +141,6 @@ target_link_libraries(${PROJECT_NAME}
   turtlelib
 )
 
-add_executable(first src/first.cpp)
-add_dependencies(first ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-target_link_libraries(first
-  ${catkin_LIBRARIES}
-  ${PROJECT_NAME}
-)
 
 add_executable(slam src/slam.cpp)
 add_dependencies(slam ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
@@ -206,7 +200,7 @@ target_include_directories(${PROJECT_NAME} PUBLIC include/)
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17) 
 target_compile_options(${PROJECT_NAME} PUBLIC -Wall -Wextra)
 
-install(TARGETS first ${PROJECT_NAME} slam 
+install(TARGETS ${PROJECT_NAME} slam 
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
