--- a/nuslam/CMakeLists.txt
+++ b/nuslam/CMakeLists.txt
@@ -151,7 +151,7 @@ target_link_libraries(slam
   turtlelib
 )
 
-add_executable(landmarks src/slam.cpp)
+add_executable(landmarks src/landmarks.cpp)
 add_dependencies(landmarks ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 target_link_libraries(landmarks
   ${catkin_LIBRARIES}
