attempt at Data Association

--- a/nusim/config/basic_world.yaml
+++ b/nusim/config/basic_world.yaml
@@ -1,7 +1,9 @@
 radius: 0.038
 rate: 500
-cylinders_x_coord: [-0.6,0.6,0.6]
-cylinders_y_coord: [-0.8,-0.8,0.8]
+cylinders_x_coord: [-0.6,0.6,0.6,-0.6, 1.2]
+cylinders_y_coord: [-0.8,-0.8,0.8,0.8, 0.0]
+# cylinders_x_coord: [-0.3,0.4,0.6,-0.8, 1.2]
+# cylinders_y_coord: [-1.1,-0.5,0.8,0.8, 0.0]
 robot: [0,0,0]
-x_length: 2.5
-y_length: 2.5
+x_length: 3.0
+y_length: 3.0
